# domcontext

./: .gitignore  README.md  pyproject.toml
.github/workflows/: publish.yml
examples/: simple_demo.ipynb
src/domcontext/: __init__.py  dom_context.py  dom_node.py  tokenizer.py
src/domcontext/_internal/: __init__.py  chunker.py  chunker_new.py  semantic.py  serializer.py
src/domcontext/_internal/chunker/: __init__.py  atomic_serializers.py  chunk.py  chunker.py  semantic_ir_serializer.py  tree_serializer.py  types.py
src/domcontext/_internal/filters/: __init__.py  semantic_pass.py  visibility_pass.py
src/domcontext/_internal/filters/semantic/: __init__.py  collapse_wrappers.py  convert.py  filter_attributes.py  filter_empty.py  generate_ids.py
src/domcontext/_internal/filters/visibility/: __init__.py  css_hidden.py  non_visible_tags.py  utils.py  zero_dimensions.py
src/domcontext/_internal/ir/: __init__.py  dom_ir.py  semantic_ir.py
src/domcontext/_internal/parsers/: __init__.py  cdp_parser.py  html_parser.py
src/domcontext/utils/: __init__.py  playwright.py
tests/: conftest.py  test_smoke.py
tests/unit/: test_chunker.py  test_tokenizer.py
tests/unit/filters/: test_semantic_filters.py  test_visibility_filters.py
tests/unit/ir/: test_dom_ir.py  test_semantic_ir.py
tests/unit/parsers/: test_cdp_parser.py  test_html_parser.py
